# IRS-PM-2023-10-29-IS24FT-GRP24-Mango-AcademicKnowledgePlatform

./: README.md
Miscellaneous/Mango - Survey/: analysis.ipynb  survey_1.xlsx  survey_2.xlsx
Miscellaneous/Mango - Survey/htmls/: q1.html  q10.html  q11.html  q12.html  q13.html  q14.html  q15.html  q16.html  q2.html  q3.html  q4.html  q5.html  q6.html  q7.html  q8.html  q9.html
Miscellaneous/Mango - Survey/suggestions/: ch.csv  en.csv  sug.csv
SystemCode/: Mango - User Guide.md  docker-compose.yaml
SystemCode/Mango-server/: .gitignore  README.md  main.py  pyproject.toml
SystemCode/Mango-server/mango_server/: config.py
SystemCode/Mango-server/mango_server/db/: core.py
SystemCode/Mango-server/mango_server/domain/: paper.py  user.py
SystemCode/Mango-server/mango_server/paper/: graph.py  info.py  routes.py
SystemCode/Mango-server/mango_server/recommend/: dual_tower.py  embedding.py  index.py  model.py  routes.py  s2_wrapper.py
SystemCode/Mango-server/mango_server/search/: ann.py  routes.py
SystemCode/Mango-server/mango_server/utils/: aiohttp_utils.py  logging_utils.py
SystemCode/Mango-web/: README.md  bun.lockb  package.json  tailwind.config.cjs
SystemCode/Mango-web/src/lib/authentication/: auth.js
SystemCode/Mango-web/src/lib/core/: Foo.svelte  Nav.svelte  PaperCard.svelte  Search.svelte
SystemCode/Mango-web/src/lib/mango/: graph.server.js  paper.server.js  recommend.server.js  search.server.js
SystemCode/Mango-web/src/routes/: +page.server.js  +page.svelte
SystemCode/mango-user/: pb_schema.json
Video/: info.txt
(+14 files in other folders)
