[tool.poetry]
name = "mango-server"
version = "1.0.0"
description = "🥭- Backend of the Mango project"
authors = [
    "Li Jiacheng <jiacheng.li@u.nus.edu>",
    "Mao Zhihong <zhihong.mao@u.nus.edu>",
    "Goh Min Hua <e1221622@u.nus.edu>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
fastapi = "^0.104.0"
rich = "^13.6.0"
duckdb = "^0.9.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pocketbase = "^0.9.2"
aiohttp = "^3.8.6"
scikit-learn = "^1.3.1"
gensim = "^4.3.2"
pymilvus = "^2.3.1"
towhee = "^1.1.2"
towhee-models = "^1.1.2"
transformers = "^4.34.1"
torch = "^2.1.0"
tensorflow = "^2.14.0"
tensorflow-recommenders = "^0.7.3"


[tool.poetry.dependencies.tensorflow-metal]
version = "1.1.0"
platform = "darwin"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
